--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <main>
     <!-- HERO -->
-    <!-- <section class="hero">
+    <section class="hero">
 
       <div class="container">
         <h1 class="hero__title">Эффективные решения <br> для вашего бизнеса</h1>
@@ -149,7 +149,7 @@
         </div>
 
 
-    </section> -->
+    </section>
 
     <!-- Benefits -->
     <!-- <section class="section">
