--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </section>
 
     <!-- Benefits -->
-    <!-- <section class="section">
+    <section class="section">
 
       <div class="container">
         <h2 class="section__title section__title--visually-hidden">Преимущества нашей компании</h2>
@@ -206,7 +206,7 @@
         </ul>
       </div>
 
-    </section> -->
+    </section>
 
     <!-- Галерея -->
     <!-- <section class="section section--nopaddingtop">
