--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </section> -->
   
     <!-- Наша команда -->
-    <!-- <section class="section section--otherbackground">
+    <section class="section section--otherbackground">
       <div class="container">
         <h2 class="section__title">Наша команда</h2>
         <ul class="team">
@@ -244,7 +244,7 @@
 
 
             <article class="team-card">
-              <img src="./images/igor.jpg" alt="Улыбающийся парень в очках" width="270" height="260">
+              <img class="team-image" src="./images/igor.jpg" alt="Улыбающийся парень в очках" width="270" height="260">
 
               <div class="team-card__wrapper">
                 <h3 class="team-card__title">Игорь Демьяненко</h3>
@@ -285,7 +285,7 @@
 
           <li class="team__item">
             <article class="team-card">
-              <img src="./images/olg.jpg" alt="Улыбающияся девушка" width="270" height="260">
+              <img  class="team-image" src="./images/olg.jpg" alt="Улыбающияся девушка" width="270" height="260">
               <div class="team-card__wrapper">
                 <h3 class="team-card__title">Ольга Репина</h3>
                 <p class="team-card__text" lang="en">Frontend Developer</p>
@@ -320,7 +320,7 @@
           </li>
           <li class="team__item">
             <article class="team-card">
-              <img src="./images/nikolay.jpg" alt="Улыбающийся парень" width="270" height="260">
+              <img class="team-image"  src="./images/nikolay.jpg" alt="Улыбающийся парень" width="270" height="260">
               <div class="team-card__wrapper">
                 <h3 class="team-card__title">Николай Тарасов</h3>
                 <p class="team-card__text" lang="en">Marketing</p>
@@ -354,7 +354,7 @@
           </li>
           <li class="team__item">
             <article class="team-card">
-              <img src="./images/mihail.jpg" alt="Бородатый парень с тату" width="270" height="260">
+              <img class="team-image"  src="./images/mihail.jpg" alt="Бородатый парень с тату" width="270" height="260">
               <div class="team-card__wrapper">
                 <h3 class="team-card__title">Михаил Ермаков</h3>
                 <p class="team-card__text" lang="en">UI Designer</p>
@@ -388,10 +388,10 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
    
     <!-- Постоянные клиенты -->
-    <!-- <section class="section">
+    <section class="section">
       <div class="container">
         <h2 class="section__title">Постоянные клиенты</h2>
 
@@ -443,17 +443,17 @@
 
       </div>
 
-    </section> -->
+    </section>
 
   </main>
 
-  <!-- <footer class="footer-page">
+  <footer class="footer-page">
 
     <div class="container">
 
       <div class="footer-page_general">
 
-
+<div class="footer-wrapper">
         <div class="content-footer">
           <a href="index.html" lang="en" class="content-footer__logo">Web<span
               class="content-footer__logo--color">Studio</span></a>
@@ -510,7 +510,7 @@
           </ul>
 
         </div>
-
+</div>
 
         <div class="footer-subscribe">
           <p class="footer-subscribe__text">Подпишитесь на рассылку</p>
@@ -531,7 +531,7 @@
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
 
   <!-- Мобильное меню -->
