--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
         <a href="" class="mobile-nav__link mobile-nav__link--active">Студия</a>
       </li>
       <li class="mobile-nav__item">
-        <a href="" class="mobile-nav__link">Портфолио</a>
+        <a href="portfolio.html" class="mobile-nav__link">Портфолио</a>
       </li>
       <li class="mobile-nav__item">
         <a href="" class="mobile-nav__link">Контакты</a>
