проверка наша команда (без фото)

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </section>
 
     <!-- Галерея -->
-    <!-- <section class="section section--nopaddingtop">
+    <section class="section section--nopaddingtop">
 
 
       <div class="container">
@@ -233,7 +233,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
   
     <!-- Наша команда -->
     <section class="section section--otherbackground">
