Ошибка текста в одной карте портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -338,7 +338,7 @@
                                 </div>
                                 <div class="card-set-meta">
                                     <h2 class="card-set-meta__caption">Inspiration has no Borders</h2>
-                                        <p class="card-set-metatext">Веб-сайт</p>
+                                        <p class="card-set-meta__text">Веб-сайт</p>
                                 </div>
                             </a>
                         </article>
